--- a/Sprint 1/static/signin.css
+++ b/Sprint 1/static/signin.css
@@ -8,7 +8,6 @@
 
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(1px);
-    -webkit-backdrop-filter: blur(1px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     width: 400px;
@@ -25,7 +24,20 @@
     border-bottom: 1px solid rgba(0, 0, 0, .125);
 }
 
+button.btn.btn-primary {
+    margin-bottom: 5px;
+    width: 100%;
+}
+
+button.btn.btn-primary-google {
+    background-color: rgb(255 0 0);
+    border-color: rgba(234, 59, 59, 0.79);
+    color: aliceblue;
+    width: 100%;
+}
+
 .card-footer {
+    font-weight: bolder;
     padding: 0.75rem 1.25rem;
     background-color: transparent !important;
     border-top: 1px solid rgba(0, 0, 0, .125);
@@ -33,4 +45,8 @@
 
 .remember {
     padding-left: 1em;
+}
+
+a {
+    color: #000000ed
 }
