--- a/Sprint 1/templates/verification.html
+++ b/Sprint 1/templates/verification.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Verification</title>
+    <link rel="stylesheet" href="../static/verification.css">
 </head>
 
 <body>
@@ -13,12 +14,14 @@
         <!-- Instructions -->
         <div class="row">
             <div class="alert alert-success col-md-12" role="alert" id="notes">
-                <h4>NOTES</h4>
+                <h4>INSTRUCTIONS</h4>
                 <ul>
                     <li>You will recieve a verification code on your mail after you registered. Enter that code below.
                     </li>
-                    <li>If somehow, you did not recieve the verification email then <a href="#">resend the verification
-                            email</a></li>
+                    <li>If somehow, you did not recieve the verification email then</li>
+                    <form action="/verification" method="get">
+                         <input type="submit" value="resend the verification email">
+                    </form>
                 </ul>
             </div>
         </div>
@@ -27,19 +30,19 @@
             <div class="col-md-12">
                 <div class="jumbotron text-center">
                     <h2>Enter the verification code</h2>
-                    <form method="post" action="/validate"  role="form">
+                    <form method="post" action="/validate" role="form">
                         <div class="col-md-9 col-sm-12">
                             <div class="form-group form-group-lg">
-                                <input type="text" class="form-control col-md-6 col-sm-6 col-sm-offset-2"
-                                    name="otp" required>
+                                <input type="number" class="form-control col-md-6 col-sm-6 col-sm-offset-2" name="otp"
+                                    required>
                                 <input class="btn btn-primary btn-lg col-md-2 col-sm-2" type="submit" value="Verify">
                             </div>
-                            <p class="message">{{msg}}</p>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+        <div class="otp">{{msg}}</div>
     </div>
 </body>
 
